--- a/.github/workflows/feature_pipeline.yaml
+++ b/.github/workflows/feature_pipeline.yaml
@@ -20,8 +20,8 @@ jobs:
 
     - name: Install Poetry
       uses: snok/install-poetry@v1
-
-      name: Install Dependencies
+      
+    - name: Install Dependencies
       run: poetry install
       if: steps.cache.outputs.cache-hit != 'true'
 
