--- a/.github/workflows/feature_pipeline.yaml
+++ b/.github/workflows/feature_pipeline.yaml
@@ -4,7 +4,7 @@ on:
   schedule:
     - cron: '0 * * * *'
 
-  workflow_dispatch:
+  # workflow_dispatch: - to run workflow manually at the moment
 
 jobs:
 
