--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ confluent-kafka = "^2.8.0"
 streamlit = "^1.41.1"
 geopandas = "^1.0.1"
 hopsworks = "^4.1.5"
+requests = "^2.32.3"
 
 
 [build-system]
