--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ python-dotenv = "^1.0.1"
 confluent-kafka = "^2.8.0"
 streamlit = "^1.41.1"
 geopandas = "^1.0.1"
-hopsworks = "^4.1.5"
 requests = "^2.32.3"
+hopsworks = "4.1.5"
 
 
 [build-system]
